--- a/index.html
+++ b/index.html
@@ -13,27 +13,27 @@
     <ul class="container__left">
         <li class="name">
             <label for="" class="name__label">Tên</label>
-            <input type="text" class="name__input">
+            <input spellcheck="false" type="text" class="name__input">
         </li>
         <li class="address-sent-letter">
             <label for="" class="address-sent-letter__label">Địa chỉ gửi thư</label>
-            <textarea class="address-sent-letter__input" name="asl" rows="4" cols="25"></textarea>
+            <textarea spellcheck="false" class="address-sent-letter__input" name="asl" rows="4" cols="25"></textarea>
         </li>
         <li class="address-mail">
             <label for="" class="address-mail__label">Địa chỉ mail</label>
-            <input type="text" class="address-mail__input">
+            <input spellcheck="false" type="text" class="address-mail__input">
         </li>
         <li class="name-own">
             <label for="" class="name-own__label">Điền tên sở hữu</label>
-            <input type="text" class="name-own__input">
+            <input spellcheck="false" type="text" class="name-own__input">
         </li>
         <li class="show-url">
             <label for="" class="show-url__label">URL hiện diện</label>
-            <textarea class="show-url__input" name="su" rows="4" cols="25"></textarea>
+            <textarea spellcheck="false" class="show-url__input" name="su" rows="4" cols="25"></textarea>
         </li>
         <li class="branch">
             <label for="" class="branch__label">Nhãn hiệu</label>
-            <input type="text" class="branch__input">
+            <input spellcheck="false" type="text" class="branch__input">
         </li>
 
     </ul>
@@ -300,22 +300,22 @@
 
         <li class="trademark-register">
             <label for="" class="trademark-register__label">Sổ đăng ký nhãn hiệu</label>
-            <textarea class="trademark-register__input" name="tr" rows="4" cols="25"></textarea>
+            <textarea spellcheck="false" class="trademark-register__input" name="tr" rows="4" cols="25"></textarea>
         </li>
 
         <li class="provide-url">
             <label for="" class="provide-url__label">Cung cấp URL</label>
-            <textarea class="provide-url__input" name="pu" rows="4" cols="25"></textarea>
+            <textarea spellcheck="false" class="provide-url__input" name="pu" rows="4" cols="25"></textarea>
         </li>
 
         <li class="provide-infor">
             <label for="" class="provide-infor__label">Cung cấp thêm thông tin</label>
-            <textarea class="provide-infor__input" name="pi" rows="4" cols="25"></textarea>
+            <textarea spellcheck="false" class="provide-infor__input" name="pi" rows="4" cols="25"></textarea>
         </li>
 
         <li class="electronic_signature">
             <label for="" class="electronic_signature__label">Chữ ký điện tử</label>
-            <input type="text" class="electronic_signature__input" placeholder="1|2|3|4|5|6|7|8">
+            <input spellcheck="false" type="text" class="electronic_signature__input" placeholder="1|2|3|4|5|6|7|8">
         </li>  
   </ul>
   </div>
