--- a/index.html
+++ b/index.html
@@ -9,6 +9,16 @@
 </head>
 <body>
   <div class="main">
+    <div class="select">
+        <select class="select__link" style="margin-bottom: 10px;">
+            <option value="https://en-gb.facebook.com/help/contact/1057530390957243">Nhãn Hiệu</option>
+            <option value="https://en-gb.facebook.com/help/contact/628238764025713">Hàng Giả</option>
+        </select>
+        <div class="input_captcha">
+            <span>Api Key :</span>
+            <input type="text" class="api_key">
+        </div>
+    </div>
   <div class="container">
     <ul class="container__left">
         <li class="name">
@@ -315,7 +325,7 @@
 
         <li class="electronic_signature">
             <label for="" class="electronic_signature__label">Chữ ký điện tử</label>
-            <input spellcheck="false" type="text" class="electronic_signature__input" placeholder="1|2|3|4|5|6|7|8">
+            <input spellcheck="false" type="text" class="electronic_signature__input" placeholder="1|2|3|4|5|6|7|8|9|10">
         </li>  
   </ul>
   </div>
